--- a/app/assets/stylesheets/users/registrations.scss
+++ b/app/assets/stylesheets/users/registrations.scss
@@ -139,7 +139,6 @@
 
   .btn-primary.btn-inat {
     margin-top: 20px;
-    padding-bottom: 7px;
     white-space: inherit;
   }
 
